# private-hackage-uploader

./: .gitignore  .hub  LICENSE  README.md  hackage-uploader.cabal  private-hackage-uploader.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-3.10/7.10.2/doc/hackage-uploader-0.2.1.0/: LICENSE
.stack-work/install/x86_64-osx/lts-3.10/7.10.2/flag-cache/: async-2.0.2-7323ce9f8a31649b3f9f961e623ae0eb  constraints-0.4.1.3-60341c1f42d6c2e30e656ac874691cee  enclosed-exceptions-1.0.1.1-d184a1822e300ec1f0268f69c7d87146  exceptions-0.8.0.2-b08bd0de7dff383d124cad3f4c34eddd  hackage-uploader-0.2.1.0-1e0a70eaf24af0371643237536149a59  hackage-uploader-0.2.1.0-f9f3c45ee7ba3433873c6dcbd3cf7e15  lifted-async-0.7.0.1-caf73b7d93475a99a095feac26c48f81  lifted-base-0.2.3.6-1dfd01e491e36bcf548a0a97190dea47  monad-control-1.0.0.4-9b806c409db033e571fac7650e2dbb97  newtype-0.2-ff9bad7643058406d79e2f04ccaccc00  optparse-applicative-0.11.0.2-64c4a013db45b66a7b578a0a518d7f3d  shelly-1.6.4-81221345c473701dfbc374a79df150b6  stm-2.4.4-2526ff89874f899372b2e4f544bb03cd  system-fileio-0.3.16.3-676ae098a6a85b7e53e71443914a2e9e  system-filepath-0.4.13.4-dd6d9e981566eaeb719b6cfd37ca58e9  transformers-base-0.4.4-47d17665c0db26ffcb68c46caa7346c1  transformers-compat-0.4.0.4-3ca5cbcec233c17da785d5f27705643c  unix-compat-0.4.1.4-c8aec8b150e56d876bc64b4916c558fe
.stack-work/install/x86_64-osx/lts-3.10/7.10.2/pkgdb/: hackage-uploader-0.2.1.0-82cc86804ce99f73510b825a50e6eda3.conf  package.cache
src/: CLI.hs  Main.hs
src/Distribution/Hackage/: Upload.hs
(+3 files in other folders)
