name:                hackage-uploader
version:             0.2.2.0
description:         Upload a package on Hackage, building its docs
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

flag library-only
     default: False

library
  hs-source-dirs:
    src
  exposed-modules:
    Distribution.Hackage.Upload
  other-modules:
    CLI
  build-depends:
      base >= 4.6 && < 5.0,
      directory >= 1.2.0.1,
      optparse-applicative >= 0.7.0.2,
      shelly >= 1.5.0,
      text >= 0.11

executable hackage-uploader
  hs-source-dirs:
      src
  main-is:
      Main.hs
  if flag(library-only)
    Buildable: False
  else
    build-depends:
        base >= 4.6 && < 5.0,
        text >= 0.11,
        shelly >= 1.5.0,
        directory >= 1.2.0.1,
        hackage-uploader >= 0.2.0.9
